fixed sizing and spacing for some elements

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 body {
-  font-family: sans-serif; }
+  font-family: sans-serif;
+  width: 990px;
+  margin-top: 45px; }
 
 h1 {
   font-weight: bold;
@@ -11,26 +13,28 @@ h2 {
 h3 {
   font-size: 12px; }
 
-body {
-  width: 990px;
-  margin-top: 50px; }
-
 nav {
   background: #FFE599;
   border: 2px solid #000;
   position: fixed;
-  height: 40px;
   padding-left: 10px;
   width: 100%;
-  top: 0; }
+  top: 0;
+  line-height: 40px;
+  vertical-align: center; }
 
 header {
   background: #B6D7A8;
   border: 2px solid #000;
-  text-align: center;
   border-radius: 15px;
+  text-align: center;
   float: left;
-  width: 600px; }
+  width: 600px;
+  margin-top: 10px; }
+  header h1 {
+    padding: 10px; }
+  header h2 {
+    padding-bottom: 10px; }
 
 .ad {
   background: #D5A6BD;
@@ -38,8 +42,13 @@ header {
   float: left;
   width: 180px;
   height: 360px;
-  text-align: center;
+  margin: 10px 15px 0 100px;
   line-height: 1.25;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   font-weight: bold;
   font-size: 14px; }
 
@@ -54,7 +63,6 @@ article {
     padding: 7px;
     line-height: 1.25; }
   article h2 {
-    font-weight: bold;
     text-align: center;
     padding: 7px 0; }
   article h3 {
