--- a/styles.css.scss
+++ b/styles.css.scss
@@ -1,6 +1,8 @@
 $border: 2px solid #000;
 body{
 	font-family: sans-serif;
+	width: 990px;
+	margin-top: 45px;
 }
 h1{
 	font: {
@@ -14,26 +16,30 @@ h2{
 h3{
 	font-size: 12px;
 }
-body{
-	width: 990px;
-	margin-top: 50px;
-}
 nav{
 	background: #FFE599;
 	border: $border;
 	position: fixed;
-	height: 40px;
 	padding-left: 10px;
 	width: 100%;
 	top: 0;
+	line-height: 40px;
+	vertical-align: center;
 }
 header{
 	background: #B6D7A8;
 	border: $border;
-	text-align: center;
 	border-radius: 15px;
+	text-align: center;
 	float: left;
 	width: 600px;
+	margin-top: 10px;
+	h1{
+		padding: 10px;
+	}
+	h2{
+		padding-bottom: 10px;
+	}
 }
 .ad{
 	background: #D5A6BD;
@@ -41,8 +47,13 @@ header{
 	float: left;
 	width: 180px;
 	height: 360px;
-	text-align: center;
+	margin: 10px 15px 0 100px;
 	line-height: 1.25;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	font: {
 		weight: bold;
 		size: 14px;
@@ -60,7 +71,6 @@ article{
 		line-height: 1.25;
 	}
 	h2{
-		font-weight: bold;
 		text-align: center;
 		padding: 7px 0;
 	}
